Better footer and fix post button firefox

--- a/client/src/app/scss/footer.scss
+++ b/client/src/app/scss/footer.scss
@@ -20,30 +20,81 @@
         display: flex;
         flex-direction: row;
         .footerCol {
-            padding: 10px 10px 10px 50px;
-            margin-left: 50px;
-            width: 40%;
             display: flex;
             align-items: center;
+            justify-content: center;
+            &.terms {
+                width: 40%;
+                @media (max-width: 768px) { 
+                    font-size: 13px;
+                }
+                @media (max-width: 992px) { 
+                    font-size: 17px;
+                }
+            }
+            &.creators {
+                width: 60%;
+            }
             .creator {
-                margin: 20px 0;
+                background-color: $backColorDimmed;
+                padding: 0 10px 4px;
+                border-radius: 10px;
+                margin: 5px;
+                .intraLogo svg {
+                    fill: #ffffff;
+                }
+                .logoLink {
+                    vertical-align: top;
+                    transform: translateY(20%);
+                    display: inline-flex;
+                    justify-content: center;
+                    height: 25px;
+                    width: 25px;
+                    margin: 0 5px;
+                    @media (max-width: 768px) { 
+                        height: 20px;
+                        width: 20px;
+                    }
+                    @media (max-width: 992px) { 
+                        height: 25px;
+                        width: 25px;
+                    }
+                    &.githubLogo {
+                        svg {
+                            height: 80%;
+                            width: 80%;
+                        }
+                    }
+                    &.intraLogo {
+                        svg {
+                            margin-top: -2px; 
+                        }
+                    }
+                    svg {
+                        height: 100%;
+                        width: 100%;
+                    }
+                    svg:hover {
+                        fill: #0080ff;
+                    }
+                }
                 .creatorProfileWrapper {
                     width: 150px;
                     display: inline-block;
+                    p {
+                        margin: 4px 0px 0;
+                    }
+                    @media (max-width: 768px) { 
+                        font-size: 13px;
+                        width: 100px;
+                    }
+                    @media (max-width: 992px) { 
+                        font-size: 17px;
+                        width: 115px;
+                    }
                 }
             }
         }
     }
-    .intraLogo svg {
-        fill: #ffffff;
-    }
-    .logoLink {
-        svg {
-            margin: 0 5px 0 5px;
-            transform: translateY(33%);
-        }
-        svg:hover {
-            fill: #0080ff;
-        }
-    }
+
 }
